# Enable Qt MOC/UIC/RCC
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC OFF)

# Export library
add_library(
  librepcb_editor STATIC
  3d/openglobject.h
  3d/openglscenebuilder.cpp
  3d/openglscenebuilder.h
  3d/opengltriangleobject.cpp
  3d/opengltriangleobject.h
  3d/slintopenglview.cpp
  3d/slintopenglview.h
  backgroundimagesettings.cpp
  backgroundimagesettings.h
  cmd/cmdattributeedit.cpp
  cmd/cmdattributeedit.h
  cmd/cmdcircleedit.cpp
  cmd/cmdcircleedit.h
  cmd/cmdholeedit.cpp
  cmd/cmdholeedit.h
  cmd/cmdimageadd.cpp
  cmd/cmdimageadd.h
  cmd/cmdimageedit.cpp
  cmd/cmdimageedit.h
  cmd/cmdimageremove.cpp
  cmd/cmdimageremove.h
  cmd/cmdlistelementinsert.h
  cmd/cmdlistelementremove.h
  cmd/cmdlistelementsswap.h
  cmd/cmdpolygonedit.cpp
  cmd/cmdpolygonedit.h
  cmd/cmdstroketextedit.cpp
  cmd/cmdstroketextedit.h
  cmd/cmdtextedit.cpp
  cmd/cmdtextedit.h
  cmd/cmdzoneedit.cpp
  cmd/cmdzoneedit.h
  dialogs/backgroundimagesetupdialog.cpp
  dialogs/backgroundimagesetupdialog.h
  dialogs/backgroundimagesetupdialog.ui
  dialogs/circlepropertiesdialog.cpp
  dialogs/circlepropertiesdialog.h
  dialogs/circlepropertiesdialog.ui
  dialogs/circuitidentifierimportdialog.cpp
  dialogs/circuitidentifierimportdialog.h
  dialogs/circuitidentifierimportdialog.ui
  dialogs/directorylockhandlerdialog.cpp
  dialogs/directorylockhandlerdialog.h
  dialogs/directorylockhandlerdialog.ui
  dialogs/dxfimportdialog.cpp
  dialogs/dxfimportdialog.h
  dialogs/dxfimportdialog.ui
  dialogs/filedialog.cpp
  dialogs/filedialog.h
  dialogs/graphicsexportdialog.cpp
  dialogs/graphicsexportdialog.h
  dialogs/graphicsexportdialog.ui
  dialogs/holepropertiesdialog.cpp
  dialogs/holepropertiesdialog.h
  dialogs/holepropertiesdialog.ui
  dialogs/movealigndialog.cpp
  dialogs/movealigndialog.h
  dialogs/movealigndialog.ui
  dialogs/polygonpropertiesdialog.cpp
  dialogs/polygonpropertiesdialog.h
  dialogs/polygonpropertiesdialog.ui
  dialogs/stroketextpropertiesdialog.cpp
  dialogs/stroketextpropertiesdialog.h
  dialogs/stroketextpropertiesdialog.ui
  dialogs/textpropertiesdialog.cpp
  dialogs/textpropertiesdialog.h
  dialogs/textpropertiesdialog.ui
  dialogs/zonepropertiesdialog.cpp
  dialogs/zonepropertiesdialog.h
  dialogs/zonepropertiesdialog.ui
  editorcommand.cpp
  editorcommand.h
  editorcommandcategory.h
  editorcommandset.h
  editorcommandsetupdater.h
  graphics/circlegraphicsitem.cpp
  graphics/circlegraphicsitem.h
  graphics/graphicslayer.cpp
  graphics/graphicslayer.h
  graphics/graphicslayerlist.cpp
  graphics/graphicslayerlist.h
  graphics/graphicslayersmodel.cpp
  graphics/graphicslayersmodel.h
  graphics/graphicsscene.cpp
  graphics/graphicsscene.h
  graphics/holegraphicsitem.cpp
  graphics/holegraphicsitem.h
  graphics/imagegraphicsitem.cpp
  graphics/imagegraphicsitem.h
  graphics/linegraphicsitem.cpp
  graphics/linegraphicsitem.h
  graphics/origincrossgraphicsitem.cpp
  graphics/origincrossgraphicsitem.h
  graphics/polygongraphicsitem.cpp
  graphics/polygongraphicsitem.h
  graphics/primitivecirclegraphicsitem.cpp
  graphics/primitivecirclegraphicsitem.h
  graphics/primitivefootprintpadgraphicsitem.cpp
  graphics/primitivefootprintpadgraphicsitem.h
  graphics/primitiveholegraphicsitem.cpp
  graphics/primitiveholegraphicsitem.h
  graphics/primitivepathgraphicsitem.cpp
  graphics/primitivepathgraphicsitem.h
  graphics/primitivetextgraphicsitem.cpp
  graphics/primitivetextgraphicsitem.h
  graphics/primitivezonegraphicsitem.cpp
  graphics/primitivezonegraphicsitem.h
  graphics/slintgraphicsview.cpp
  graphics/slintgraphicsview.h
  graphics/stroketextgraphicsitem.cpp
  graphics/stroketextgraphicsitem.h
  graphics/textgraphicsitem.cpp
  graphics/textgraphicsitem.h
  graphics/zonegraphicsitem.cpp
  graphics/zonegraphicsitem.h
  guiapplication.cpp
  guiapplication.h
  hometab.cpp
  hometab.h
  library/cat/categorychooserdialog.cpp
  library/cat/categorychooserdialog.h
  library/cat/categorychooserdialog.ui
  library/cat/categorytreebuilder.cpp
  library/cat/categorytreebuilder.h
  library/cat/categorytreelabeltextbuilder.cpp
  library/cat/categorytreelabeltextbuilder.h
  library/cat/componentcategorytab.cpp
  library/cat/componentcategorytab.h
  library/cat/packagecategorytab.cpp
  library/cat/packagecategorytab.h
  library/cmd/cmdcomponentedit.cpp
  library/cmd/cmdcomponentedit.h
  library/cmd/cmdcomponentpinsignalmapitemedit.cpp
  library/cmd/cmdcomponentpinsignalmapitemedit.h
  library/cmd/cmdcomponentsignaledit.cpp
  library/cmd/cmdcomponentsignaledit.h
  library/cmd/cmdcomponentsymbolvariantedit.cpp
  library/cmd/cmdcomponentsymbolvariantedit.h
  library/cmd/cmdcomponentsymbolvariantitemedit.cpp
  library/cmd/cmdcomponentsymbolvariantitemedit.h
  library/cmd/cmddeviceedit.cpp
  library/cmd/cmddeviceedit.h
  library/cmd/cmddevicepadsignalmapitemedit.cpp
  library/cmd/cmddevicepadsignalmapitemedit.h
  library/cmd/cmddragselectedfootprintitems.cpp
  library/cmd/cmddragselectedfootprintitems.h
  library/cmd/cmddragselectedsymbolitems.cpp
  library/cmd/cmddragselectedsymbolitems.h
  library/cmd/cmdfootprintedit.cpp
  library/cmd/cmdfootprintedit.h
  library/cmd/cmdfootprintpadedit.cpp
  library/cmd/cmdfootprintpadedit.h
  library/cmd/cmdlibrarybaseelementedit.cpp
  library/cmd/cmdlibrarybaseelementedit.h
  library/cmd/cmdlibrarycategoryedit.cpp
  library/cmd/cmdlibrarycategoryedit.h
  library/cmd/cmdlibraryedit.cpp
  library/cmd/cmdlibraryedit.h
  library/cmd/cmdlibraryelementedit.cpp
  library/cmd/cmdlibraryelementedit.h
  library/cmd/cmdpackageedit.cpp
  library/cmd/cmdpackageedit.h
  library/cmd/cmdpackagemodeladd.cpp
  library/cmd/cmdpackagemodeladd.h
  library/cmd/cmdpackagemodeledit.cpp
  library/cmd/cmdpackagemodeledit.h
  library/cmd/cmdpackagemodelremove.cpp
  library/cmd/cmdpackagemodelremove.h
  library/cmd/cmdpackagepadedit.cpp
  library/cmd/cmdpackagepadedit.h
  library/cmd/cmdpartedit.cpp
  library/cmd/cmdpartedit.h
  library/cmd/cmdpastefootprintitems.cpp
  library/cmd/cmdpastefootprintitems.h
  library/cmd/cmdpastesymbolitems.cpp
  library/cmd/cmdpastesymbolitems.h
  library/cmd/cmdremoveselectedfootprintitems.cpp
  library/cmd/cmdremoveselectedfootprintitems.h
  library/cmd/cmdremoveselectedsymbolitems.cpp
  library/cmd/cmdremoveselectedsymbolitems.h
  library/cmd/cmdsymbolpinedit.cpp
  library/cmd/cmdsymbolpinedit.h
  library/cmp/componentchooserdialog.cpp
  library/cmp/componentchooserdialog.h
  library/cmp/componentchooserdialog.ui
  library/cmp/componentgateeditor.cpp
  library/cmp/componentgateeditor.h
  library/cmp/componentgatelistmodel.cpp
  library/cmp/componentgatelistmodel.h
  library/cmp/componentpinoutlistmodel.cpp
  library/cmp/componentpinoutlistmodel.h
  library/cmp/componentsignallistmodel.cpp
  library/cmp/componentsignallistmodel.h
  library/cmp/componentsignalnamelistmodel.cpp
  library/cmp/componentsignalnamelistmodel.h
  library/cmp/componenttab.cpp
  library/cmp/componenttab.h
  library/cmp/componentvarianteditor.cpp
  library/cmp/componentvarianteditor.h
  library/cmp/componentvariantlistmodel.cpp
  library/cmp/componentvariantlistmodel.h
  library/createlibrarytab.cpp
  library/createlibrarytab.h
  library/dev/devicepinoutbuilder.cpp
  library/dev/devicepinoutbuilder.h
  library/dev/devicepinoutlistmodel.cpp
  library/dev/devicepinoutlistmodel.h
  library/dev/devicetab.cpp
  library/dev/devicetab.h
  library/dev/parteditor.cpp
  library/dev/parteditor.h
  library/dev/partlistmodel.cpp
  library/dev/partlistmodel.h
  library/downloadlibrarytab.cpp
  library/downloadlibrarytab.h
  library/eaglelibraryimportwizard/eaglelibraryimportwizard.cpp
  library/eaglelibraryimportwizard/eaglelibraryimportwizard.h
  library/eaglelibraryimportwizard/eaglelibraryimportwizard.ui
  library/eaglelibraryimportwizard/eaglelibraryimportwizardcontext.cpp
  library/eaglelibraryimportwizard/eaglelibraryimportwizardcontext.h
  library/eaglelibraryimportwizard/eaglelibraryimportwizardpage_chooselibrary.cpp
  library/eaglelibraryimportwizard/eaglelibraryimportwizardpage_chooselibrary.h
  library/eaglelibraryimportwizard/eaglelibraryimportwizardpage_chooselibrary.ui
  library/eaglelibraryimportwizard/eaglelibraryimportwizardpage_result.cpp
  library/eaglelibraryimportwizard/eaglelibraryimportwizardpage_result.h
  library/eaglelibraryimportwizard/eaglelibraryimportwizardpage_result.ui
  library/eaglelibraryimportwizard/eaglelibraryimportwizardpage_selectelements.cpp
  library/eaglelibraryimportwizard/eaglelibraryimportwizardpage_selectelements.h
  library/eaglelibraryimportwizard/eaglelibraryimportwizardpage_selectelements.ui
  library/eaglelibraryimportwizard/eaglelibraryimportwizardpage_setoptions.cpp
  library/eaglelibraryimportwizard/eaglelibraryimportwizardpage_setoptions.h
  library/eaglelibraryimportwizard/eaglelibraryimportwizardpage_setoptions.ui
  library/eaglelibraryimportwizard/eaglelibraryimportwizardpage_start.cpp
  library/eaglelibraryimportwizard/eaglelibraryimportwizardpage_start.h
  library/eaglelibraryimportwizard/eaglelibraryimportwizardpage_start.ui
  library/kicadlibraryimportwizard/kicadlibraryimportwizard.cpp
  library/kicadlibraryimportwizard/kicadlibraryimportwizard.h
  library/kicadlibraryimportwizard/kicadlibraryimportwizard.ui
  library/kicadlibraryimportwizard/kicadlibraryimportwizardcontext.cpp
  library/kicadlibraryimportwizard/kicadlibraryimportwizardcontext.h
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_chooselibrary.cpp
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_chooselibrary.h
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_chooselibrary.ui
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_parse.cpp
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_parse.h
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_parse.ui
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_result.cpp
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_result.h
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_result.ui
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_selectelements.cpp
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_selectelements.h
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_selectelements.ui
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_setoptions.cpp
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_setoptions.h
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_setoptions.ui
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_start.cpp
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_start.h
  library/kicadlibraryimportwizard/kicadlibraryimportwizardpage_start.ui
  library/lib/librarydependenciesmodel.cpp
  library/lib/librarydependenciesmodel.h
  library/lib/librarytab.cpp
  library/lib/librarytab.h
  library/librariesmodel.cpp
  library/librariesmodel.h
  library/librarydownload.cpp
  library/librarydownload.h
  library/libraryeditor.cpp
  library/libraryeditor.h
  library/libraryeditortab.cpp
  library/libraryeditortab.h
  library/libraryelementcache.cpp
  library/libraryelementcache.h
  library/libraryelementcategoriesmodel.cpp
  library/libraryelementcategoriesmodel.h
  library/pkg/footprintclipboarddata.cpp
  library/pkg/footprintclipboarddata.h
  library/pkg/footprintgraphicsitem.cpp
  library/pkg/footprintgraphicsitem.h
  library/pkg/footprintlistmodel.cpp
  library/pkg/footprintlistmodel.h
  library/pkg/footprintpadgraphicsitem.cpp
  library/pkg/footprintpadgraphicsitem.h
  library/pkg/footprintpadpropertiesdialog.cpp
  library/pkg/footprintpadpropertiesdialog.h
  library/pkg/footprintpadpropertiesdialog.ui
  library/pkg/fsm/packageeditorfsm.cpp
  library/pkg/fsm/packageeditorfsm.h
  library/pkg/fsm/packageeditorfsmadapter.h
  library/pkg/fsm/packageeditorstate.cpp
  library/pkg/fsm/packageeditorstate.h
  library/pkg/fsm/packageeditorstate_addholes.cpp
  library/pkg/fsm/packageeditorstate_addholes.h
  library/pkg/fsm/packageeditorstate_addnames.cpp
  library/pkg/fsm/packageeditorstate_addnames.h
  library/pkg/fsm/packageeditorstate_addpads.cpp
  library/pkg/fsm/packageeditorstate_addpads.h
  library/pkg/fsm/packageeditorstate_addvalues.cpp
  library/pkg/fsm/packageeditorstate_addvalues.h
  library/pkg/fsm/packageeditorstate_drawarc.cpp
  library/pkg/fsm/packageeditorstate_drawarc.h
  library/pkg/fsm/packageeditorstate_drawcircle.cpp
  library/pkg/fsm/packageeditorstate_drawcircle.h
  library/pkg/fsm/packageeditorstate_drawline.cpp
  library/pkg/fsm/packageeditorstate_drawline.h
  library/pkg/fsm/packageeditorstate_drawpolygon.cpp
  library/pkg/fsm/packageeditorstate_drawpolygon.h
  library/pkg/fsm/packageeditorstate_drawpolygonbase.cpp
  library/pkg/fsm/packageeditorstate_drawpolygonbase.h
  library/pkg/fsm/packageeditorstate_drawrect.cpp
  library/pkg/fsm/packageeditorstate_drawrect.h
  library/pkg/fsm/packageeditorstate_drawtext.cpp
  library/pkg/fsm/packageeditorstate_drawtext.h
  library/pkg/fsm/packageeditorstate_drawtextbase.cpp
  library/pkg/fsm/packageeditorstate_drawtextbase.h
  library/pkg/fsm/packageeditorstate_drawzone.cpp
  library/pkg/fsm/packageeditorstate_drawzone.h
  library/pkg/fsm/packageeditorstate_measure.cpp
  library/pkg/fsm/packageeditorstate_measure.h
  library/pkg/fsm/packageeditorstate_renumberpads.cpp
  library/pkg/fsm/packageeditorstate_renumberpads.h
  library/pkg/fsm/packageeditorstate_select.cpp
  library/pkg/fsm/packageeditorstate_select.h
  library/pkg/packagechooserdialog.cpp
  library/pkg/packagechooserdialog.h
  library/pkg/packagechooserdialog.ui
  library/pkg/packagemodellistmodel.cpp
  library/pkg/packagemodellistmodel.h
  library/pkg/packagepadlistmodel.cpp
  library/pkg/packagepadlistmodel.h
  library/pkg/packagetab.cpp
  library/pkg/packagetab.h
  library/sym/fsm/symboleditorfsm.cpp
  library/sym/fsm/symboleditorfsm.h
  library/sym/fsm/symboleditorfsmadapter.h
  library/sym/fsm/symboleditorstate.cpp
  library/sym/fsm/symboleditorstate.h
  library/sym/fsm/symboleditorstate_addimage.cpp
  library/sym/fsm/symboleditorstate_addimage.h
  library/sym/fsm/symboleditorstate_addnames.cpp
  library/sym/fsm/symboleditorstate_addnames.h
  library/sym/fsm/symboleditorstate_addpins.cpp
  library/sym/fsm/symboleditorstate_addpins.h
  library/sym/fsm/symboleditorstate_addvalues.cpp
  library/sym/fsm/symboleditorstate_addvalues.h
  library/sym/fsm/symboleditorstate_drawarc.cpp
  library/sym/fsm/symboleditorstate_drawarc.h
  library/sym/fsm/symboleditorstate_drawcircle.cpp
  library/sym/fsm/symboleditorstate_drawcircle.h
  library/sym/fsm/symboleditorstate_drawline.cpp
  library/sym/fsm/symboleditorstate_drawline.h
  library/sym/fsm/symboleditorstate_drawpolygon.cpp
  library/sym/fsm/symboleditorstate_drawpolygon.h
  library/sym/fsm/symboleditorstate_drawpolygonbase.cpp
  library/sym/fsm/symboleditorstate_drawpolygonbase.h
  library/sym/fsm/symboleditorstate_drawrect.cpp
  library/sym/fsm/symboleditorstate_drawrect.h
  library/sym/fsm/symboleditorstate_drawtext.cpp
  library/sym/fsm/symboleditorstate_drawtext.h
  library/sym/fsm/symboleditorstate_drawtextbase.cpp
  library/sym/fsm/symboleditorstate_drawtextbase.h
  library/sym/fsm/symboleditorstate_measure.cpp
  library/sym/fsm/symboleditorstate_measure.h
  library/sym/fsm/symboleditorstate_select.cpp
  library/sym/fsm/symboleditorstate_select.h
  library/sym/symbolchooserdialog.cpp
  library/sym/symbolchooserdialog.h
  library/sym/symbolchooserdialog.ui
  library/sym/symbolclipboarddata.cpp
  library/sym/symbolclipboarddata.h
  library/sym/symbolgraphicsitem.cpp
  library/sym/symbolgraphicsitem.h
  library/sym/symbolpingraphicsitem.cpp
  library/sym/symbolpingraphicsitem.h
  library/sym/symbolpinpropertiesdialog.cpp
  library/sym/symbolpinpropertiesdialog.h
  library/sym/symbolpinpropertiesdialog.ui
  library/sym/symboltab.cpp
  library/sym/symboltab.h
  mainwindow.cpp
  mainwindow.h
  mainwindowtestadapter.cpp
  mainwindowtestadapter.h
  modelview/angledelegate.cpp
  modelview/angledelegate.h
  modelview/attributelistmodel.cpp
  modelview/attributelistmodel.h
  modelview/attributelistmodellegacy.cpp
  modelview/attributelistmodellegacy.h
  modelview/checkableitemsdelegate.cpp
  modelview/checkableitemsdelegate.h
  modelview/comboboxdelegate.cpp
  modelview/comboboxdelegate.h
  modelview/editablelistmodel.h
  modelview/keyboardshortcutsmodel.cpp
  modelview/keyboardshortcutsmodel.h
  modelview/keysequencedelegate.cpp
  modelview/keysequencedelegate.h
  modelview/lengthdelegate.cpp
  modelview/lengthdelegate.h
  modelview/partinformationdelegate.cpp
  modelview/partinformationdelegate.h
  modelview/pathmodel.cpp
  modelview/pathmodel.h
  notification.cpp
  notification.h
  notificationsmodel.cpp
  notificationsmodel.h
  project/addcomponentdialog.cpp
  project/addcomponentdialog.h
  project/addcomponentdialog.ui
  project/assemblyvariantlisteditorwidget.cpp
  project/assemblyvariantlisteditorwidget.h
  project/assemblyvariantlistmodel.cpp
  project/assemblyvariantlistmodel.h
  project/board/board2dtab.cpp
  project/board/board2dtab.h
  project/board/board3dtab.cpp
  project/board/board3dtab.h
  project/board/boardclipboarddata.cpp
  project/board/boardclipboarddata.h
  project/board/boardclipboarddatabuilder.cpp
  project/board/boardclipboarddatabuilder.h
  project/board/boardeditor.cpp
  project/board/boardeditor.h
  project/board/boardgraphicsscene.cpp
  project/board/boardgraphicsscene.h
  project/board/boardpickplacegeneratordialog.cpp
  project/board/boardpickplacegeneratordialog.h
  project/board/boardpickplacegeneratordialog.ui
  project/board/boardplanepropertiesdialog.cpp
  project/board/boardplanepropertiesdialog.h
  project/board/boardplanepropertiesdialog.ui
  project/board/boardselectionquery.cpp
  project/board/boardselectionquery.h
  project/board/boardsetupdialog.cpp
  project/board/boardsetupdialog.h
  project/board/boardsetupdialog.ui
  project/board/boardviapropertiesdialog.cpp
  project/board/boardviapropertiesdialog.h
  project/board/boardviapropertiesdialog.ui
  project/board/deviceinstancepropertiesdialog.cpp
  project/board/deviceinstancepropertiesdialog.h
  project/board/deviceinstancepropertiesdialog.ui
  project/board/fsm/boardeditorfsm.cpp
  project/board/fsm/boardeditorfsm.h
  project/board/fsm/boardeditorfsmadapter.h
  project/board/fsm/boardeditorstate.cpp
  project/board/fsm/boardeditorstate.h
  project/board/fsm/boardeditorstate_adddevice.cpp
  project/board/fsm/boardeditorstate_adddevice.h
  project/board/fsm/boardeditorstate_addhole.cpp
  project/board/fsm/boardeditorstate_addhole.h
  project/board/fsm/boardeditorstate_addstroketext.cpp
  project/board/fsm/boardeditorstate_addstroketext.h
  project/board/fsm/boardeditorstate_addvia.cpp
  project/board/fsm/boardeditorstate_addvia.h
  project/board/fsm/boardeditorstate_drawplane.cpp
  project/board/fsm/boardeditorstate_drawplane.h
  project/board/fsm/boardeditorstate_drawpolygon.cpp
  project/board/fsm/boardeditorstate_drawpolygon.h
  project/board/fsm/boardeditorstate_drawtrace.cpp
  project/board/fsm/boardeditorstate_drawtrace.h
  project/board/fsm/boardeditorstate_drawzone.cpp
  project/board/fsm/boardeditorstate_drawzone.h
  project/board/fsm/boardeditorstate_measure.cpp
  project/board/fsm/boardeditorstate_measure.h
  project/board/fsm/boardeditorstate_select.cpp
  project/board/fsm/boardeditorstate_select.h
  project/board/graphicsitems/bgi_airwire.cpp
  project/board/graphicsitems/bgi_airwire.h
  project/board/graphicsitems/bgi_device.cpp
  project/board/graphicsitems/bgi_device.h
  project/board/graphicsitems/bgi_footprintpad.cpp
  project/board/graphicsitems/bgi_footprintpad.h
  project/board/graphicsitems/bgi_hole.cpp
  project/board/graphicsitems/bgi_hole.h
  project/board/graphicsitems/bgi_netline.cpp
  project/board/graphicsitems/bgi_netline.h
  project/board/graphicsitems/bgi_netpoint.cpp
  project/board/graphicsitems/bgi_netpoint.h
  project/board/graphicsitems/bgi_plane.cpp
  project/board/graphicsitems/bgi_plane.h
  project/board/graphicsitems/bgi_polygon.cpp
  project/board/graphicsitems/bgi_polygon.h
  project/board/graphicsitems/bgi_stroketext.cpp
  project/board/graphicsitems/bgi_stroketext.h
  project/board/graphicsitems/bgi_via.cpp
  project/board/graphicsitems/bgi_via.h
  project/board/graphicsitems/bgi_zone.cpp
  project/board/graphicsitems/bgi_zone.h
  project/bomgeneratordialog.cpp
  project/bomgeneratordialog.h
  project/bomgeneratordialog.ui
  project/cmd/cmdaddcomponenttocircuit.cpp
  project/cmd/cmdaddcomponenttocircuit.h
  project/cmd/cmdadddevicetoboard.cpp
  project/cmd/cmdadddevicetoboard.h
  project/cmd/cmdaddsymboltoschematic.cpp
  project/cmd/cmdaddsymboltoschematic.h
  project/cmd/cmdassemblyvariantadd.cpp
  project/cmd/cmdassemblyvariantadd.h
  project/cmd/cmdassemblyvariantedit.cpp
  project/cmd/cmdassemblyvariantedit.h
  project/cmd/cmdassemblyvariantremove.cpp
  project/cmd/cmdassemblyvariantremove.h
  project/cmd/cmdboardadd.cpp
  project/cmd/cmdboardadd.h
  project/cmd/cmdboardedit.cpp
  project/cmd/cmdboardedit.h
  project/cmd/cmdboardholeadd.cpp
  project/cmd/cmdboardholeadd.h
  project/cmd/cmdboardholeedit.cpp
  project/cmd/cmdboardholeedit.h
  project/cmd/cmdboardholeremove.cpp
  project/cmd/cmdboardholeremove.h
  project/cmd/cmdboardnetlineedit.cpp
  project/cmd/cmdboardnetlineedit.h
  project/cmd/cmdboardnetpointedit.cpp
  project/cmd/cmdboardnetpointedit.h
  project/cmd/cmdboardnetsegmentadd.cpp
  project/cmd/cmdboardnetsegmentadd.h
  project/cmd/cmdboardnetsegmentaddelements.cpp
  project/cmd/cmdboardnetsegmentaddelements.h
  project/cmd/cmdboardnetsegmentedit.cpp
  project/cmd/cmdboardnetsegmentedit.h
  project/cmd/cmdboardnetsegmentremove.cpp
  project/cmd/cmdboardnetsegmentremove.h
  project/cmd/cmdboardnetsegmentremoveelements.cpp
  project/cmd/cmdboardnetsegmentremoveelements.h
  project/cmd/cmdboardplaneadd.cpp
  project/cmd/cmdboardplaneadd.h
  project/cmd/cmdboardplaneedit.cpp
  project/cmd/cmdboardplaneedit.h
  project/cmd/cmdboardplaneremove.cpp
  project/cmd/cmdboardplaneremove.h
  project/cmd/cmdboardpolygonadd.cpp
  project/cmd/cmdboardpolygonadd.h
  project/cmd/cmdboardpolygonedit.cpp
  project/cmd/cmdboardpolygonedit.h
  project/cmd/cmdboardpolygonremove.cpp
  project/cmd/cmdboardpolygonremove.h
  project/cmd/cmdboardremove.cpp
  project/cmd/cmdboardremove.h
  project/cmd/cmdboardspecctraimport.cpp
  project/cmd/cmdboardspecctraimport.h
  project/cmd/cmdboardsplitnetline.cpp
  project/cmd/cmdboardsplitnetline.h
  project/cmd/cmdboardstroketextadd.cpp
  project/cmd/cmdboardstroketextadd.h
  project/cmd/cmdboardstroketextedit.cpp
  project/cmd/cmdboardstroketextedit.h
  project/cmd/cmdboardstroketextremove.cpp
  project/cmd/cmdboardstroketextremove.h
  project/cmd/cmdboardviaedit.cpp
  project/cmd/cmdboardviaedit.h
  project/cmd/cmdboardzoneadd.cpp
  project/cmd/cmdboardzoneadd.h
  project/cmd/cmdboardzoneedit.cpp
  project/cmd/cmdboardzoneedit.h
  project/cmd/cmdboardzoneremove.cpp
  project/cmd/cmdboardzoneremove.h
  project/cmd/cmdchangenetsignalofschematicnetsegment.cpp
  project/cmd/cmdchangenetsignalofschematicnetsegment.h
  project/cmd/cmdcombineboardnetsegments.cpp
  project/cmd/cmdcombineboardnetsegments.h
  project/cmd/cmdcombinenetsignals.cpp
  project/cmd/cmdcombinenetsignals.h
  project/cmd/cmdcombineschematicnetsegments.cpp
  project/cmd/cmdcombineschematicnetsegments.h
  project/cmd/cmdcomponentinstanceadd.cpp
  project/cmd/cmdcomponentinstanceadd.h
  project/cmd/cmdcomponentinstanceedit.cpp
  project/cmd/cmdcomponentinstanceedit.h
  project/cmd/cmdcomponentinstanceremove.cpp
  project/cmd/cmdcomponentinstanceremove.h
  project/cmd/cmdcompsiginstsetnetsignal.cpp
  project/cmd/cmdcompsiginstsetnetsignal.h
  project/cmd/cmddeviceinstanceadd.cpp
  project/cmd/cmddeviceinstanceadd.h
  project/cmd/cmddeviceinstanceedit.cpp
  project/cmd/cmddeviceinstanceedit.h
  project/cmd/cmddeviceinstanceeditall.cpp
  project/cmd/cmddeviceinstanceeditall.h
  project/cmd/cmddeviceinstanceremove.cpp
  project/cmd/cmddeviceinstanceremove.h
  project/cmd/cmddevicestroketextadd.cpp
  project/cmd/cmddevicestroketextadd.h
  project/cmd/cmddevicestroketextremove.cpp
  project/cmd/cmddevicestroketextremove.h
  project/cmd/cmddevicestroketextsreset.cpp
  project/cmd/cmddevicestroketextsreset.h
  project/cmd/cmddragselectedboarditems.cpp
  project/cmd/cmddragselectedboarditems.h
  project/cmd/cmddragselectedschematicitems.cpp
  project/cmd/cmddragselectedschematicitems.h
  project/cmd/cmdflipselectedboarditems.cpp
  project/cmd/cmdflipselectedboarditems.h
  project/cmd/cmdnetclassadd.cpp
  project/cmd/cmdnetclassadd.h
  project/cmd/cmdnetclassedit.cpp
  project/cmd/cmdnetclassedit.h
  project/cmd/cmdnetclassremove.cpp
  project/cmd/cmdnetclassremove.h
  project/cmd/cmdnetsignaladd.cpp
  project/cmd/cmdnetsignaladd.h
  project/cmd/cmdnetsignaledit.cpp
  project/cmd/cmdnetsignaledit.h
  project/cmd/cmdnetsignalremove.cpp
  project/cmd/cmdnetsignalremove.h
  project/cmd/cmdpasteboarditems.cpp
  project/cmd/cmdpasteboarditems.h
  project/cmd/cmdpasteschematicitems.cpp
  project/cmd/cmdpasteschematicitems.h
  project/cmd/cmdprojectedit.cpp
  project/cmd/cmdprojectedit.h
  project/cmd/cmdprojectlibraryaddelement.cpp
  project/cmd/cmdprojectlibraryaddelement.h
  project/cmd/cmdprojectlibraryremoveelement.cpp
  project/cmd/cmdprojectlibraryremoveelement.h
  project/cmd/cmdremoveboarditems.cpp
  project/cmd/cmdremoveboarditems.h
  project/cmd/cmdremoveselectedboarditems.cpp
  project/cmd/cmdremoveselectedboarditems.h
  project/cmd/cmdremoveselectedschematicitems.cpp
  project/cmd/cmdremoveselectedschematicitems.h
  project/cmd/cmdremoveunusedlibraryelements.cpp
  project/cmd/cmdremoveunusedlibraryelements.h
  project/cmd/cmdremoveunusednetsignals.cpp
  project/cmd/cmdremoveunusednetsignals.h
  project/cmd/cmdreplacedevice.cpp
  project/cmd/cmdreplacedevice.h
  project/cmd/cmdschematicadd.cpp
  project/cmd/cmdschematicadd.h
  project/cmd/cmdschematicedit.cpp
  project/cmd/cmdschematicedit.h
  project/cmd/cmdschematicimageadd.cpp
  project/cmd/cmdschematicimageadd.h
  project/cmd/cmdschematicimageremove.cpp
  project/cmd/cmdschematicimageremove.h
  project/cmd/cmdschematicnetlabeladd.cpp
  project/cmd/cmdschematicnetlabeladd.h
  project/cmd/cmdschematicnetlabeledit.cpp
  project/cmd/cmdschematicnetlabeledit.h
  project/cmd/cmdschematicnetpointedit.cpp
  project/cmd/cmdschematicnetpointedit.h
  project/cmd/cmdschematicnetsegmentadd.cpp
  project/cmd/cmdschematicnetsegmentadd.h
  project/cmd/cmdschematicnetsegmentaddelements.cpp
  project/cmd/cmdschematicnetsegmentaddelements.h
  project/cmd/cmdschematicnetsegmentedit.cpp
  project/cmd/cmdschematicnetsegmentedit.h
  project/cmd/cmdschematicnetsegmentremove.cpp
  project/cmd/cmdschematicnetsegmentremove.h
  project/cmd/cmdschematicnetsegmentremoveelements.cpp
  project/cmd/cmdschematicnetsegmentremoveelements.h
  project/cmd/cmdschematicpolygonadd.cpp
  project/cmd/cmdschematicpolygonadd.h
  project/cmd/cmdschematicpolygonremove.cpp
  project/cmd/cmdschematicpolygonremove.h
  project/cmd/cmdschematicremove.cpp
  project/cmd/cmdschematicremove.h
  project/cmd/cmdschematictextadd.cpp
  project/cmd/cmdschematictextadd.h
  project/cmd/cmdschematictextremove.cpp
  project/cmd/cmdschematictextremove.h
  project/cmd/cmdsymbolinstanceadd.cpp
  project/cmd/cmdsymbolinstanceadd.h
  project/cmd/cmdsymbolinstanceedit.cpp
  project/cmd/cmdsymbolinstanceedit.h
  project/cmd/cmdsymbolinstanceeditall.cpp
  project/cmd/cmdsymbolinstanceeditall.h
  project/cmd/cmdsymbolinstanceremove.cpp
  project/cmd/cmdsymbolinstanceremove.h
  project/cmd/cmdsymbolinstancetextadd.cpp
  project/cmd/cmdsymbolinstancetextadd.h
  project/cmd/cmdsymbolinstancetextremove.cpp
  project/cmd/cmdsymbolinstancetextremove.h
  project/cmd/cmdsymbolinstancetextsreset.cpp
  project/cmd/cmdsymbolinstancetextsreset.h
  project/componentassemblyoptionlisteditorwidget.cpp
  project/componentassemblyoptionlisteditorwidget.h
  project/newprojectwizard/newprojectwizard.cpp
  project/newprojectwizard/newprojectwizard.h
  project/newprojectwizard/newprojectwizard.ui
  project/newprojectwizard/newprojectwizardpage_eagleimport.cpp
  project/newprojectwizard/newprojectwizardpage_eagleimport.h
  project/newprojectwizard/newprojectwizardpage_eagleimport.ui
  project/newprojectwizard/newprojectwizardpage_initialization.cpp
  project/newprojectwizard/newprojectwizardpage_initialization.h
  project/newprojectwizard/newprojectwizardpage_initialization.ui
  project/newprojectwizard/newprojectwizardpage_metadata.cpp
  project/newprojectwizard/newprojectwizardpage_metadata.h
  project/newprojectwizard/newprojectwizardpage_metadata.ui
  project/outputjobsdialog/archiveoutputjobwidget.cpp
  project/outputjobsdialog/archiveoutputjobwidget.h
  project/outputjobsdialog/archiveoutputjobwidget.ui
  project/outputjobsdialog/board3doutputjobwidget.cpp
  project/outputjobsdialog/board3doutputjobwidget.h
  project/outputjobsdialog/board3doutputjobwidget.ui
  project/outputjobsdialog/bomoutputjobwidget.cpp
  project/outputjobsdialog/bomoutputjobwidget.h
  project/outputjobsdialog/bomoutputjobwidget.ui
  project/outputjobsdialog/copyoutputjobwidget.cpp
  project/outputjobsdialog/copyoutputjobwidget.h
  project/outputjobsdialog/copyoutputjobwidget.ui
  project/outputjobsdialog/gerberexcellonoutputjobwidget.cpp
  project/outputjobsdialog/gerberexcellonoutputjobwidget.h
  project/outputjobsdialog/gerberexcellonoutputjobwidget.ui
  project/outputjobsdialog/gerberx3outputjobwidget.cpp
  project/outputjobsdialog/gerberx3outputjobwidget.h
  project/outputjobsdialog/gerberx3outputjobwidget.ui
  project/outputjobsdialog/graphicsoutputjobwidget.cpp
  project/outputjobsdialog/graphicsoutputjobwidget.h
  project/outputjobsdialog/graphicsoutputjobwidget.ui
  project/outputjobsdialog/interactivehtmlbomoutputjobwidget.cpp
  project/outputjobsdialog/interactivehtmlbomoutputjobwidget.h
  project/outputjobsdialog/interactivehtmlbomoutputjobwidget.ui
  project/outputjobsdialog/lppzoutputjobwidget.cpp
  project/outputjobsdialog/lppzoutputjobwidget.h
  project/outputjobsdialog/lppzoutputjobwidget.ui
  project/outputjobsdialog/netlistoutputjobwidget.cpp
  project/outputjobsdialog/netlistoutputjobwidget.h
  project/outputjobsdialog/netlistoutputjobwidget.ui
  project/outputjobsdialog/outputjobhomewidget.cpp
  project/outputjobsdialog/outputjobhomewidget.h
  project/outputjobsdialog/outputjobhomewidget.ui
  project/outputjobsdialog/outputjoblistwidgetitem.cpp
  project/outputjobsdialog/outputjoblistwidgetitem.h
  project/outputjobsdialog/outputjoblistwidgetitem.ui
  project/outputjobsdialog/outputjobsdialog.cpp
  project/outputjobsdialog/outputjobsdialog.h
  project/outputjobsdialog/outputjobsdialog.ui
  project/outputjobsdialog/pickplaceoutputjobwidget.cpp
  project/outputjobsdialog/pickplaceoutputjobwidget.h
  project/outputjobsdialog/pickplaceoutputjobwidget.ui
  project/outputjobsdialog/projectjsonoutputjobwidget.cpp
  project/outputjobsdialog/projectjsonoutputjobwidget.h
  project/outputjobsdialog/projectjsonoutputjobwidget.ui
  project/partinformationprovider.cpp
  project/partinformationprovider.h
  project/partinformationtooltip.cpp
  project/partinformationtooltip.h
  project/partinformationtooltip.ui
  project/projecteditor.cpp
  project/projecteditor.h
  project/projectreadmerenderer.cpp
  project/projectreadmerenderer.h
  project/projectsetupdialog.cpp
  project/projectsetupdialog.h
  project/projectsetupdialog.ui
  project/schematic/fsm/schematiceditorfsm.cpp
  project/schematic/fsm/schematiceditorfsm.h
  project/schematic/fsm/schematiceditorfsmadapter.h
  project/schematic/fsm/schematiceditorstate.cpp
  project/schematic/fsm/schematiceditorstate.h
  project/schematic/fsm/schematiceditorstate_addcomponent.cpp
  project/schematic/fsm/schematiceditorstate_addcomponent.h
  project/schematic/fsm/schematiceditorstate_addimage.cpp
  project/schematic/fsm/schematiceditorstate_addimage.h
  project/schematic/fsm/schematiceditorstate_addnetlabel.cpp
  project/schematic/fsm/schematiceditorstate_addnetlabel.h
  project/schematic/fsm/schematiceditorstate_addtext.cpp
  project/schematic/fsm/schematiceditorstate_addtext.h
  project/schematic/fsm/schematiceditorstate_drawpolygon.cpp
  project/schematic/fsm/schematiceditorstate_drawpolygon.h
  project/schematic/fsm/schematiceditorstate_drawwire.cpp
  project/schematic/fsm/schematiceditorstate_drawwire.h
  project/schematic/fsm/schematiceditorstate_measure.cpp
  project/schematic/fsm/schematiceditorstate_measure.h
  project/schematic/fsm/schematiceditorstate_select.cpp
  project/schematic/fsm/schematiceditorstate_select.h
  project/schematic/graphicsitems/sgi_netlabel.cpp
  project/schematic/graphicsitems/sgi_netlabel.h
  project/schematic/graphicsitems/sgi_netline.cpp
  project/schematic/graphicsitems/sgi_netline.h
  project/schematic/graphicsitems/sgi_netpoint.cpp
  project/schematic/graphicsitems/sgi_netpoint.h
  project/schematic/graphicsitems/sgi_symbol.cpp
  project/schematic/graphicsitems/sgi_symbol.h
  project/schematic/graphicsitems/sgi_symbolpin.cpp
  project/schematic/graphicsitems/sgi_symbolpin.h
  project/schematic/graphicsitems/sgi_text.cpp
  project/schematic/graphicsitems/sgi_text.h
  project/schematic/renamenetsegmentdialog.cpp
  project/schematic/renamenetsegmentdialog.h
  project/schematic/renamenetsegmentdialog.ui
  project/schematic/schematicclipboarddata.cpp
  project/schematic/schematicclipboarddata.h
  project/schematic/schematicclipboarddatabuilder.cpp
  project/schematic/schematicclipboarddatabuilder.h
  project/schematic/schematiceditor.cpp
  project/schematic/schematiceditor.h
  project/schematic/schematicgraphicsscene.cpp
  project/schematic/schematicgraphicsscene.h
  project/schematic/schematicselectionquery.cpp
  project/schematic/schematicselectionquery.h
  project/schematic/schematictab.cpp
  project/schematic/schematictab.h
  project/schematic/symbolinstancepropertiesdialog.cpp
  project/schematic/symbolinstancepropertiesdialog.h
  project/schematic/symbolinstancepropertiesdialog.ui
  rulecheck/rulecheckmessagesmodel.cpp
  rulecheck/rulecheckmessagesmodel.h
  undocommand.cpp
  undocommand.h
  undocommandgroup.cpp
  undocommandgroup.h
  undostack.cpp
  undostack.h
  utils/deriveduiobjectlistview.h
  utils/dismissablemessagecontext.cpp
  utils/dismissablemessagecontext.h
  utils/editortoolbox.cpp
  utils/editortoolbox.h
  utils/imagehelpers.cpp
  utils/imagehelpers.h
  utils/lengtheditcontext.cpp
  utils/lengtheditcontext.h
  utils/measuretool.cpp
  utils/measuretool.h
  utils/menubuilder.cpp
  utils/menubuilder.h
  utils/searchcontext.cpp
  utils/searchcontext.h
  utils/shortcutsreferencegenerator.cpp
  utils/shortcutsreferencegenerator.h
  utils/slinthelpers.cpp
  utils/slinthelpers.h
  utils/slintkeyeventtextbuilder.cpp
  utils/slintkeyeventtextbuilder.h
  utils/standardeditorcommandhandler.cpp
  utils/standardeditorcommandhandler.h
  utils/toolbarproxy.cpp
  utils/toolbarproxy.h
  utils/uihelpers.cpp
  utils/uihelpers.h
  utils/uiobjectlist.h
  widgets/alignmentselector.cpp
  widgets/alignmentselector.h
  widgets/alignmentselector.ui
  widgets/angleedit.cpp
  widgets/angleedit.h
  widgets/attributelisteditorwidget.cpp
  widgets/attributelisteditorwidget.h
  widgets/checkableitemseditorwidget.cpp
  widgets/checkableitemseditorwidget.h
  widgets/doublespinbox.cpp
  widgets/doublespinbox.h
  widgets/editabletablewidget.cpp
  widgets/editabletablewidget.h
  widgets/graphicsexportpreviewwidget.cpp
  widgets/graphicsexportpreviewwidget.h
  widgets/graphicsview.cpp
  widgets/graphicsview.h
  widgets/holeeditorwidget.cpp
  widgets/holeeditorwidget.h
  widgets/holeeditorwidget.ui
  widgets/if_graphicsvieweventhandler.h
  widgets/keysequenceseditorwidget.cpp
  widgets/keysequenceseditorwidget.h
  widgets/layercombobox.cpp
  widgets/layercombobox.h
  widgets/lengthedit.cpp
  widgets/lengthedit.h
  widgets/lengtheditbase.cpp
  widgets/lengtheditbase.h
  widgets/messagewidget.cpp
  widgets/messagewidget.h
  widgets/numbereditbase.cpp
  widgets/numbereditbase.h
  widgets/openglview.cpp
  widgets/openglview.h
  widgets/patheditorwidget.cpp
  widgets/patheditorwidget.h
  widgets/positivelengthedit.cpp
  widgets/positivelengthedit.h
  widgets/ratioedit.cpp
  widgets/ratioedit.h
  widgets/unsignedlengthedit.cpp
  widgets/unsignedlengthedit.h
  widgets/unsignedlimitedratioedit.cpp
  widgets/unsignedlimitedratioedit.h
  widgets/unsignedratioedit.cpp
  widgets/unsignedratioedit.h
  widgets/waitingspinnerwidget.cpp
  widgets/waitingspinnerwidget.h
  windowsection.cpp
  windowsection.h
  windowtab.cpp
  windowtab.h
  workspace/categorytreemodel.cpp
  workspace/categorytreemodel.h
  workspace/categorytreemodellegacy.cpp
  workspace/categorytreemodellegacy.h
  workspace/desktopintegration.cpp
  workspace/desktopintegration.h
  workspace/desktopservices.cpp
  workspace/desktopservices.h
  workspace/filesystemmodel.cpp
  workspace/filesystemmodel.h
  workspace/initializeworkspacewizard/initializeworkspacewizard.cpp
  workspace/initializeworkspacewizard/initializeworkspacewizard.h
  workspace/initializeworkspacewizard/initializeworkspacewizard.ui
  workspace/initializeworkspacewizard/initializeworkspacewizard_choosesettings.cpp
  workspace/initializeworkspacewizard/initializeworkspacewizard_choosesettings.h
  workspace/initializeworkspacewizard/initializeworkspacewizard_choosesettings.ui
  workspace/initializeworkspacewizard/initializeworkspacewizard_chooseworkspace.cpp
  workspace/initializeworkspacewizard/initializeworkspacewizard_chooseworkspace.h
  workspace/initializeworkspacewizard/initializeworkspacewizard_chooseworkspace.ui
  workspace/initializeworkspacewizard/initializeworkspacewizard_upgrade.cpp
  workspace/initializeworkspacewizard/initializeworkspacewizard_upgrade.h
  workspace/initializeworkspacewizard/initializeworkspacewizard_upgrade.ui
  workspace/initializeworkspacewizard/initializeworkspacewizard_welcome.cpp
  workspace/initializeworkspacewizard/initializeworkspacewizard_welcome.h
  workspace/initializeworkspacewizard/initializeworkspacewizard_welcome.ui
  workspace/initializeworkspacewizard/initializeworkspacewizardcontext.cpp
  workspace/initializeworkspacewizard/initializeworkspacewizardcontext.h
  workspace/projectlibraryupdater/projectlibraryupdater.cpp
  workspace/projectlibraryupdater/projectlibraryupdater.h
  workspace/projectlibraryupdater/projectlibraryupdater.ui
  workspace/quickaccessmodel.cpp
  workspace/quickaccessmodel.h
  workspace/workspacesettingsdialog.cpp
  workspace/workspacesettingsdialog.h
  workspace/workspacesettingsdialog.ui
)
# Maybe the explicit dependency fixes spurious race conditions on CI.
add_dependencies(librepcb_editor Slint::Slint)
slint_target_sources(
  librepcb_editor ui/appwindow.slint
  NAMESPACE ui
  COMPILATION_UNITS 12
)
target_include_directories(
  librepcb_editor
  PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../.."
)
target_link_libraries(
  librepcb_editor
  PRIVATE common
          # LibrePCB
          LibrePCB::EagleImport
          LibrePCB::KiCadImport
          # Third party
          OpenGL::GLU
)
target_link_libraries(
  librepcb_editor
  PUBLIC # LibrePCB
         LibrePCB::Core
         # Third party
         Slint::Slint
         TypeSafe::TypeSafe
         # Qt
         ${QT}::Core
         ${QT}::Gui
         ${QT}::OpenGL
         ${QT}::OpenGLWidgets
         ${QT}::PrintSupport
         ${QT}::Svg
         ${QT}::Network
         ${QT}::Widgets
)

# Alias to namespaced variant
add_library(LibrePCB::Editor ALIAS librepcb_editor)
